--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pineau-rousteau",
-  "homepage": "https://jeremiebillet.github.io/samuel",
+  "homepage": "https://jeremie.ovh",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
